--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 h1 {
-    color: rgb(245, 35, 63);
+    text-align: center;
+    color: violet
 }
 
 p {
-    color:blueviolet;
+    font-size: larger;
 }
